@@ -5,6 +5,7 @@ from ucommon 5.3.0 to 5.3.1
 - search and replace, regular expression support.
 - UString extended with copy/cut/paste/left/right operations.
 - stringpager extended with set/replace method and split.
+- added fsys::pipe and fsys::noexec.
 
 from ucommon 5.2.2 to 5.3.0
 - sort specific string collation functions added
